--- a/.golangci.yml
+++ b/.golangci.yml
@@ -31,17 +31,17 @@ output:
 
 # all available settings of specific linters
 linters-settings:
-  errorlint:
-    errorf: true
-    asserts: true
-    comparison: true
-
   govet:
     # report about shadowed variables
     check-shadowing: false
 
   gofmt:
     simplify: true
+
+  errorlint:
+    errorf: true
+    asserts: true
+    comparison: true
 
   gocritic:
     disabled-checks:
@@ -55,6 +55,12 @@ linters-settings:
   staticcheck:
     go: "1.19"
     checks: ["all"]
+
+  revive:
+    rules:
+      - name: exported
+        arguments:
+          - disableStutteringCheck
 
 issues:
   exclude:
@@ -71,9 +77,12 @@ linters:
     - goimports
     - gocritic
     - unused
-    - govet
-    - gofmt
     - ineffassign
     - typecheck
+    - govet
+    - gofmt
+    - errorlint
     - nestif
+    - staticcheck
+    - revive
   fast: false
