--- a/.dockerignore
+++ b/.dockerignore
@@ -1,17 +1,12 @@
 # Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-bin/*
+**/*.so
+**/*.dylib
+**/bin/*
 
 # Test binary, built with `go test -c`
-*.test
-testdata
-
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+**/*.test
+**/testdata
+**/ctest
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
