--- a/fly.toml
+++ b/fly.toml
@@ -1,15 +1,28 @@
-# fly.toml file generated for protohacker-go on 2022-12-06T19:37:12Z
+# fly.toml file generated for protohacker-go on 2022-10-19T11:57:01+01:00
 
 app = "protohacker-go"
 kill_signal = "SIGINT"
 kill_timeout = 5
 
 [env]
-  ADDRESS = "fly-global-services:5000"
+  # ADDRESS = "fly-global-services:5000"
 
 [[services]]
-  internal_port = 5000
-  protocol = "udp"
+  internal_port = 8080
+  protocol = "tcp"
+  [services.concurrency]
+    hard_limit = 150
+    soft_limit = 70
 
   [[services.ports]]
-    port = 5000
+    port = "10001"
+
+  [[services.tcp_checks]]
+    interval = "15s"
+    timeout = "2s"
+
+# [[services]]
+#   internal_port = 5000
+#   protocol = "udp"
+#   [[services.ports]]
+#     port = 5000
